--- a/accounts/templates/accounts/main.html
+++ b/accounts/templates/accounts/main.html
@@ -11,6 +11,27 @@
       crossorigin="anonymous"
     />
     <title>Document</title>
+
+    <style>
+      #logo{}
+
+      body{
+        background-color: #ebeff5;
+      }
+
+      #total-orders{
+        background-color: #4cb4c7;
+      }
+
+      #orders-delivered{
+        background-color: #7abecc;
+      }
+
+      #orders-pending{
+        background-color: #7cd1c0; 
+      }
+    </style>
+
   </head>
   <body>
     {% include 'accounts/navbar.html' %} {% block content %} {% endblock %}
