--- a/accounts/templates/accounts/main.html
+++ b/accounts/templates/accounts/main.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -10,33 +12,15 @@
       integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" type="text/css" href="{% static '\css\main.css' %}" />
     <title>Document</title>
-
-    <style>
-      #logo{}
-
-      body{
-        background-color: #ebeff5;
-      }
-
-      #total-orders{
-        background-color: #4cb4c7;
-      }
-
-      #orders-delivered{
-        background-color: #7abecc;
-      }
-
-      #orders-pending{
-        background-color: #7cd1c0; 
-      }
-    </style>
-
   </head>
   <body>
-    {% include 'accounts/navbar.html' %} {% block content %} {% endblock %}
-
-    <br />
+    {% include 'accounts/navbar.html' %}
+    <div class="container-fluid">
+      {% block content %} {% endblock %}
+      <br />
+    </div>
     <h5>Our Footer</h5>
 
     <script
