--- a/accounts/templates/accounts/customer.html
+++ b/accounts/templates/accounts/customer.html
@@ -64,8 +64,8 @@
             <td>{{order.product.category}}</td>
             <td>{{order.date_created}}</td>
             <td>{{order.status}}</td>
-            <td><a class = "btn btn-primary btn-info" href="">Update</td>
-            <td><a class = "btn btn-primary btn-danger" href="">Delete</td>
+            <td><a class="btn btn-sm btn-info"href="{% url 'update_order' order.id %}">Update</td>
+              <td><a class="btn btn-sm btn-danger" href="{% url 'delete_order' order.id %}">Delete</td>
           </tr>
         {% endfor %}
       </table>
