--- a/accounts/templates/accounts/customer.html
+++ b/accounts/templates/accounts/customer.html
@@ -38,7 +38,9 @@
 <div class="row">
   <div class="col">
     <div class="card card-body">
+
       <form method="get">
+        {{myFilter.form}}
         <button class="btn btn-primary" type="submit">Search</button>
       </form>
     </div>
@@ -54,6 +56,7 @@
           <th>Product</th>
           <th>Category</th>
           <th>Date Orderd</th>
+          <th>Note</th>
           <th>Status</th>
           <th>Update</th>
           <th>Remove</th>
@@ -63,6 +66,7 @@
             <td>{{order.product}}</td>
             <td>{{order.product.category}}</td>
             <td>{{order.date_created}}</td>
+            <td>{{order.notes}}</td>
             <td>{{order.status}}</td>
             <td><a class="btn btn-sm btn-info"href="{% url 'update_order' order.id %}">Update</td>
               <td><a class="btn btn-sm btn-danger" href="{% url 'delete_order' order.id %}">Delete</td>
