--- a/accounts/templates/accounts/status.html
+++ b/accounts/templates/accounts/status.html
@@ -29,6 +29,19 @@
 
 	<div class="col">
 		<div class="col-md">
+			<div class="card text-center text-black  mb-3" id="ofd">
+			  	<div class="card-header">
+			  		<h5 class="card-title">Out for Delivery</h5>
+			  	</div>
+			  	<div class="card-body">
+			    	<h3 class="card-title">{{ofd}}</h3>
+			  	</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="col">
+		<div class="col-md">
 			<div class="card text-center text-white  mb-3" id="orders-pending">
 			  	<div class="card-header">
 			  		<h5 class="card-title">Orders Pending</h5>
