--- a/accounts/templates/accounts/status.html
+++ b/accounts/templates/accounts/status.html
@@ -29,7 +29,7 @@
 
 	<div class="col">
 		<div class="col-md">
-			<div class="card text-center text-black  mb-3" id="ofd">
+			<div class="card text-center text-white  mb-3" id="ofd">
 			  	<div class="card-header">
 			  		<h5 class="card-title">Out for Delivery</h5>
 			  	</div>
